--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.selumobileapps.puppies">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/launcher"
@@ -15,9 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FavoritesActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity
+            android:name=".FavoritesActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity 
+            android:name=".ContactActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
