--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
+    testCompile 'junit:junit:4.12'
 }
